# Bioloop

./: .env.example  .gitignore  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  app.py  pyproject.toml  requirements.txt
.streamlit/: secrets.toml.example
docs/: OURA_REVIEW_CHECKLIST.md  PRIVACY_POLICY.md  PRODUCT_EXPERIENCE_DESIGN.md  PRODUCT_UX_CONSTITUTION.md  TERMS_OF_SERVICE.md  VISUAL_REFERENCES.md
oura_data/: __init__.py  artifacts.py  charts.py  client.py  config.py  normalize.py  oauth.py  storage.py  sync.py
tests/: test_artifacts.py  test_charts.py  test_client.py  test_normalize.py  test_oauth.py  test_storage.py
